--- a/Week1/form4.htm
+++ b/Week1/form4.htm
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style4.css">
     <title>Form4</title>
 </head>
-<body>
+<body style="background-color: rgb(252, 239, 244)">
     <script>
         function changeBKColor() {
             document.body.style.backgroundColor = document.getElementById("input").value;
