--- a/Week1/form5.htm
+++ b/Week1/form5.htm
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body style="display: flex; align-items: center; justify-content: center; background-color: palevioletred;">
+<body style="display: flex; align-items: center; justify-content: center; background-color: rgb(252, 239, 244);">
     <script>
         function uppercase() {
             var s = document.getElementById("input").value;
