--- a/Week3/left.htm
+++ b/Week3/left.htm
@@ -58,10 +58,13 @@
             <a href="./Tknangcao.php" target="frame3" class="link">Tim kiem nang cao</a>
         </li>
         <li class="item">
-            <a href="form44.htm" target="frame3" class="link">Xoa thong tin</a>
+            <a href="./login_form.php" target="frame3" class="link">Cap nhat thong tin</a>
         </li>
         <li class="item">
-            <a href="form55.htm" target="frame3" class="link">Xoa tat ca</a>
+            <a href="./form55.htm" target="frame3" class="link">Xoa thong tin nhan vien</a>
+        </li>
+        <li class="item">
+            <a href="./form55.htm" target="frame3" class="link">Xoa tat ca</a>
         </li>
     </ul>
 </body>
